Sucessfully writing to yolo label for a single annotation

--- a/configs/config_dstl.json
+++ b/configs/config_dstl.json
@@ -4,8 +4,7 @@
         "image_h": 300,
         "raw_data_rel": "/data/raw/dstl/",
         "proc_data_rel": "/data/processed/dstl/",
-        "sub_dirs": ["6010"],
-        "sub_dirs": ['6010']
+        "sub_dirs": ["6010"]
     }
 }
 
