Can now freeze backend

--- a/configs/config_yolo.json
+++ b/configs/config_yolo.json
@@ -4,7 +4,8 @@
         "input_size":           200,
         "anchors":              [0.00, 0.00, 0.33, 0.34, 0.43, 1.02, 0.60, 0.53, 1.17, 0.89],
         "max_box_per_image":    40,        
-        "labels":               ["trees"]
+        "labels":               ["trees"],
+        "freeze_backend":      true
     },
 
     "train": {
