--- a/.gitignore
+++ b/.gitignore
@@ -4,7 +4,6 @@ config.yaml
 
 # cached/accessory
 .ipynb_checkpoints/
-src/*.pyc
 src/__pycache__
 __pycache__
 .streamlit
@@ -22,6 +21,7 @@ Untitled.ipynb
 
 # temp files
 *swp
+*pyc
 *swo
 
 # model directories
