dstl pipeline working

--- a/configs/config_dstl.json
+++ b/configs/config_dstl.json
@@ -6,8 +6,8 @@
         "proc_data_rel": "/data/processed/dstl/",
         "label_format": "voc",
         "valid_frac": 0.3,
-        "sub_dirs": ["6010", "6020", "6030", "6040", "6050", "6060",
-                     "6070", "6080", "6090", "6100", "6110", "6120", 
-                     "6130", "6140", "6150", "6160", "6170", "6180"]
+        "sub_dirs": ["6010", "6040", "6060",
+                     "6070", "6090", "6100", "6110", "6120", 
+                     "6140", "6150", "6160", "6170"]
     }
 }
