--- a/configs/config_yolo_dstl.json
+++ b/configs/config_yolo_dstl.json
@@ -4,7 +4,7 @@
         "input_size":           416,
         "anchors":              [0.57273, 0.677385, 1.87446, 2.06253, 3.33843, 5.47434, 7.88282, 3.52778, 9.77052, 9.16828],
         "max_box_per_image":    40,        
-        "labels":               ["trees"],
+        "labels":               ["trees", "canopy"],
         "freeze_backend":      false,
         "iou_threshold":        0.5
     },
