--- a/configs/config_predict_dstl.json
+++ b/configs/config_predict_dstl.json
@@ -1,11 +1,24 @@
 {
       "model": "yolo2",
+      "labels": ["trees", "canopy"],
       "save_detect": true,
       "save_bb": true,
-      "sat_tif":   "data/raw/athens/athens_satellite.tif",
-      "image_path":   "data/processed/athens/label_100/predict/images/",
-      "bb_folder":   "data/processed/athens/label_100/predict/bb_info/",
-      "detect_folder":   "data/processed/athens/label_100/predict/images_detected/",
-      "weights": "model_weights/full_yolo_tree_athens_all.h5",
-      "peak_rad": 4
+      "image_path":   "data/processed/dstl/predict/images/",
+      "bb_folder":   "data/processed/dstl/predict/bb_info/",
+      "detect_folder":   "data/processed/dstl/predict/images_detected/",
+
+      "pixpeak": {
+        "sat_tif":   "data/raw/athens/athens_satellite.tif",
+        "peak_rad": 4
+      },
+
+      "yolo2": {
+        "backend": "FullYolo",
+        "weights": "model_weights/full_yolo_tree_dslt_all.h5",
+        "input_size": 416,
+        "anchors": [0.57273, 0.677385, 1.87446, 2.06253, 3.33843, 5.47434, 7.88282, 3.52778, 9.77052, 9.16828],
+        "max_box_per_image":100,        
+        "freeze_backend": false,
+        "iou_threshold": 0.5
+      }
 }
