Added scripts for examples. Need to test inference and update README

--- a/configs/config_predict_athens.json
+++ b/configs/config_predict_athens.json
@@ -8,8 +8,7 @@
       "detect_folder":   "data/processed/athens/predict/images_detected/",
 
       "pixelpeak": {
-        "sat_tif":   "data/raw/athens/athens_satellite.tif",
-        "peak_rad": 4
+        "sat_tif":   "data/raw/athens/athens_satellite.tif"
       },
 
       "yolo2": {
